# hotel_numbers

./: README.rst  pyproject.toml
hotel_signs/: hotel.py
tests/: test_hotel_signs.py
