[tool.poetry]
name = "hotel_signs"
version = "0.1.0"
description = ""
authors = ["teo <teodantes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
hotel = "hotel_signs.hotel:start"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
